--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -31,26 +31,26 @@
             <label th:for="locationID">Location</label>
             <select th:field="*{locationId}">
                 <option th:each="location : *{locations}"
-                        th:values="$(location.id)"
-                        th:text="$(location.value)"></option>
+                        th:values="${location.id}"
+                        th:text="${location.value}"></option>
             </select>
         </div>
 
         <div class="form-group">
             <label th:for="coreCompetencyId">Core Competency</label>
-            <select th:field="*{coreCompetencyId">
-                <option th:each="coreCompetency : *{coreCompetencies"
+            <select th:field="*{coreCompetencyId}">
+                <option th:each="coreCompetency : *{coreCompetencies}"
                         th:value="${coreCompetency.id}"
-                        th:text="${coreCompetency.value"></option>
+                        th:text="${coreCompetency.value}"></option>
             </select>
         </div>
 
         <div class="form-group">
             <label th:for="positionTypeId">Position Type</label>
-            <select th:field="*{positionTypeId">
+            <select th:field="*{positionTypeId}">
                 <option th:each="positionType : *{positionType}"
-                        th:value="$(positionType.id)"
-                        th:text="$(positionType.value"></option>
+                        th:value="${positionType.id}"
+                        th:text="${positionType.value}"></option>
             </select>
         </div>
 
