--- a/src/main/resources/templates/new-job.html
+++ b/src/main/resources/templates/new-job.html
@@ -31,7 +31,7 @@
             <label th:for="locationID">Location</label>
             <select th:field="*{locationId}">
                 <option th:each="location : *{locations}"
-                        th:values="${location.id}"
+                        th:value="${location.id}"
                         th:text="${location.value}"></option>
             </select>
         </div>
@@ -48,7 +48,7 @@
         <div class="form-group">
             <label th:for="positionTypeId">Position Type</label>
             <select th:field="*{positionTypeId}">
-                <option th:each="positionType : *{positionType}"
+                <option th:each="positionType : *{positionTypes}"
                         th:value="${positionType.id}"
                         th:text="${positionType.value}"></option>
             </select>
